# mlx-hyperbolic

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  DONE.md  GEOOPT_vs_MLX.md  PLAN.txt  PYMANOPT_vs_MLX.md  README.md  TODO.md  pyproject.toml
python/mlx_hyperbolic/: __init__.py  ops.py
src/: lut_ops.cpp  lut_ops.h  main.cpp
src/kernels/: hyperbolic.metal
tests/: benchmark_speed.py
